RESOLVED FIXED90962
[BlackBerry] We shouldn't call didFinishLoading for the old request when a new request has been sent by notifyAuthReceived.
https://bugs.webkit.org/show_bug.cgi?id=90962
Summary [BlackBerry] We shouldn't call didFinishLoading for the old request when a ne...
Jason Liu
Reported 2012-07-11 03:56:04 PDT
We should do like 301's handling.
Attachments
Patch (3.87 KB, patch)
2012-07-11 23:45 PDT, Jason Liu
no flags
Jason Liu
Comment 1 2012-07-11 04:01:01 PDT
A patch is coming tomorrow.
Jason Liu
Comment 2 2012-07-11 23:45:55 PDT
Rob Buis
Comment 3 2012-07-12 13:45:05 PDT
Comment on attachment 151868 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151868&action=review > Source/WebCore/ChangeLog:11 > + We should do as 3XX. Any PR? Internal review? > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:-507 > - return true; Why was this part removed?
Jason Liu
Comment 4 2012-07-12 18:35:00 PDT
(In reply to comment #3) > (From update of attachment 151868 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=151868&action=review > > > Source/WebCore/ChangeLog:11 > > + We should do as 3XX. > > Any PR? Internal review? > There is no PR for this. I just find this problem when fixing another pr. > > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:-507 > > - return true; > > Why was this part removed? I moved "if (m_redirectCount >= s_redirectMaximum)" to handleRedirect().
Joe Mason
Comment 5 2012-07-13 07:33:53 PDT
Comment on attachment 151868 [details] Patch LGTM. Nice catch!
Rob Buis
Comment 6 2012-07-13 07:36:51 PDT
Comment on attachment 151868 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151868&action=review Looks good. >>> Source/WebCore/ChangeLog:11 >>> + We should do as 3XX. >> >> There is no PR for this. I just find this problem when fixing another pr. > > Any PR? Internal review? Ok, you could add Joe Mason as internal reviewer before landing, up to you.
WebKit Review Bot
Comment 7 2012-07-15 19:53:32 PDT
Comment on attachment 151868 [details] Patch Clearing flags on attachment: 151868 Committed r122692: <http://trac.webkit.org/changeset/122692>
WebKit Review Bot
Comment 8 2012-07-15 19:53:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.