[BlackBerry] We shouldn't call didFinishLoading for the old request when a new request has been sent by notifyAuthReceived. https://bugs.webkit.org/show_bug.cgi?id=90962

Reviewed by Rob Buis.

We start a new NetworkJob with credentials after receiving 401/407 status.
We should not release resources in webcore when the old job is closed because
they are needed by the new one.
We should do as 3XX.

No new tests. No change in behaviour.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::NetworkJob):
(WebCore::NetworkJob::notifyAuthReceived):
(WebCore::NetworkJob::shouldReleaseClientResource):
(WebCore::NetworkJob::handleRedirect):
* platform/network/blackberry/NetworkJob.h:
(NetworkJob):


Canonical link: https://commits.webkit.org/109164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122692 268f45cc-cd09-0410-ab3c-d52691b4dbfc